# API/src/main/java/com/kbaje/eshop/controllers/CheckoutController.java
@@ -1,7 +1,5 @@
 package com.kbaje.eshop.controllers;
 
-import java.util.UUID;
-
 import com.kbaje.eshop.dto.AddProductToCartDto;
 import com.kbaje.eshop.dto.CartDto;
 import com.kbaje.eshop.services.CheckoutService;
@@ -9,8 +7,8 @@ import com.kbaje.eshop.services.CheckoutService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -19,12 +17,13 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
-@CrossOrigin(origins = "*", allowedHeaders = "*")
+@CrossOrigin(origins = "*", allowedHeaders = "*", methods = { RequestMethod.GET, RequestMethod.POST, RequestMethod.PUT,
+        RequestMethod.DELETE })
 @Tag(name = "Checkout", description = "Operations about checkout")
 @RestController
 @RequestMapping("/api/checkout")
 public class CheckoutController {
-    
+
     @Autowired
     private CheckoutService checkoutService;
 
@@ -35,9 +34,9 @@ public class CheckoutController {
     }
 
     @Operation(summary = "Add product to cart", description = "Add product to cart", security = @SecurityRequirement(name = "bearerAuth"))
-    @PostMapping("addProductToCart/{cartId}")
-    public CartDto addProductToCart(@PathVariable UUID cartId, @RequestBody AddProductToCartDto payload) {
-        return checkoutService.addProductToCart(cartId, payload);
+    @PostMapping("addProductToCart")
+    public CartDto addProductToCart(@RequestBody AddProductToCartDto payload) {
+        return checkoutService.addProductToCart(payload);
     }
 
     @Operation(summary = "Get user orders", description = "Get user orders", security = @SecurityRequirement(name = "bearerAuth"))
@@ -46,4 +45,9 @@ public class CheckoutController {
         return checkoutService.getUserOrders();
     }
 
+    @Operation(summary = "Get cart", description = "Get cart", security = @SecurityRequirement(name = "bearerAuth"))
+    @PostMapping("getCart")
+    public CartDto getCart() {
+        return checkoutService.getUserCart();
+    }
 }
