# API/src/main/java/com/kbaje/eshop/dto/CreateProductDto.java
@@ -1,8 +1,12 @@
 package com.kbaje.eshop.dto;
 
+import java.math.BigDecimal;
+
 public class CreateProductDto {
 
     public String name;
     public String description;
+    public String imageUrl;
+    public BigDecimal price;
 
 }
