# Client/swagger.json
@@ -174,6 +174,33 @@
                 ]
             }
         },
+        "/api/checkout/getCart": {
+            "post": {
+                "tags": [
+                    "Checkout"
+                ],
+                "summary": "Get cart",
+                "description": "Get cart",
+                "operationId": "getCart",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CartDto"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/checkout/createCart": {
             "post": {
                 "tags": [
@@ -201,7 +228,7 @@
                 ]
             }
         },
-        "/api/checkout/addProductToCart/{cartId}": {
+        "/api/checkout/addProductToCart": {
             "post": {
                 "tags": [
                     "Checkout"
@@ -209,17 +236,6 @@
                 "summary": "Add product to cart",
                 "description": "Add product to cart",
                 "operationId": "addProductToCart",
-                "parameters": [
-                    {
-                        "name": "cartId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -237,6 +253,33 @@
                             "*/*": {
                                 "schema": {
                                     "$ref": "#/components/schemas/CartDto"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/user/getUser": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get user",
+                "description": "Get user",
+                "operationId": "getUser",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserDto"
                                 }
                             }
                         }
@@ -423,6 +466,9 @@
                     },
                     "email": {
                         "type": "string"
+                    },
+                    "role": {
+                        "type": "string"
                     }
                 }
             },
@@ -459,6 +505,12 @@
                     },
                     "description": {
                         "type": "string"
+                    },
+                    "imageUrl": {
+                        "type": "string"
+                    },
+                    "price": {
+                        "type": "number"
                     }
                 }
             },
